--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <div style="display: flex; justify-content: center; align-items: center; position: fixed; top:0; left:0; bottom:0; right:0;">
+	  <span>&heart;</span>
+  </div>
 </body>
 </html>
