--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
   <div style="display: flex; justify-content: center; align-items: center; position: fixed; top:0; left:0; bottom:0; right:0;">
-	  <span>&heart;</span>
+	  <span>&hearts;</span>
   </div>
 </body>
 </html>
